Made buttons bigger on mobile by fixing margins

--- a/css/templatemo-ocean-vibes.css
+++ b/css/templatemo-ocean-vibes.css
@@ -766,17 +766,21 @@ address {
     }
 
     .tm-nav-link {
-        width: 120px;
-        height: 120px;
-        padding-top: 5px;
+        width: 160px;
+        height: 160px;
+        padding-top: 10px;
         /* padding-bottom: 5px;    */
-        font-size: 0.8em;
+        font-size: 1em;
     }
 
     .simple_icon {
-        max-width: 70px;
-        max-height: 70px;
+        max-width: 100px;
+        max-height: 100px;
         /* padding-bottom: 50px; */
+    }
+
+    .tm-nav-item {
+        margin: 10px;
     }
 
     .tm-main-nav ul {
